# syntax-abuse

./: Cargo.toml  README.md
src/: lib.rs
