[package]
name = "syntax-abuse"
version = "0.1.0"
authors = ["Alex Shand <alex@alexshand.com>"]
edition = "2018"

[features]
proc = ["syn", "proc-macro2"]

[dependencies]
syn = { version = "1.0.17", features = ["full", "extra-traits"], optional = true }
proc-macro2 = { version = "1.0.10", optional = true }
lazy_static = "1.4.0"
pretty_assertions = "0.6.1"